--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "d3": "^5.9.2",
+    "d3-dsv": "^1.1.1",
+    "d3-scale": "^3.0.0",
     "gatsby": "^2.3.27",
     "gatsby-image": "^2.0.40",
     "gatsby-plugin-feed": "^2.1.1",
