--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "babel-plugin-styled-components": "^1.10.0",
     "d3": "^5.9.2",
     "d3-dsv": "^1.1.1",
@@ -41,6 +42,7 @@
     "react-parcoords": "^0.3.0",
     "react-styled-flexboxgrid": "^3.1.0",
     "react-typography": "^0.16.19",
+    "slickgrid": "^2.4.7",
     "styled-components": "^4.2.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.54",
