#291 Added basic grid to project page

--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "polished": "^3.2.0",
     "prismjs": "^1.16.0",
     "react": "^16.8.6",
+    "react-data-grid": "^6.1.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.6.1",
     "react-parcoords": "^0.3.0",
     "react-styled-flexboxgrid": "^3.1.0",
     "react-typography": "^0.16.19",
-    "slickgrid": "^2.4.7",
     "styled-components": "^4.2.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.54",
