--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "@material-ui/core": "^3.9.3",
     "babel-plugin-styled-components": "^1.10.0",
     "d3": "^5.9.2",
-    "d3-dsv": "^1.1.1",
-    "d3-scale": "^3.0.0",
     "gatsby": "^2.3.27",
     "gatsby-image": "^2.0.40",
     "gatsby-plugin-feed": "^2.1.1",
@@ -48,7 +46,9 @@
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.54",
     "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typography-theme-wordpress-2016": "^0.16.19",
+    "underscore": "^1.9.1",
+    "underscore-math": "^0.1.4"
   },
   "devDependencies": {
     "babel-jest": "^24.8.0",
