--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,4 +29,12 @@ steps:
       overWrite: true
   displayName: 'Copying built static files'
 
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Free Trial (5d79274a-fe9e-402c-91af-267b2932fa6c)'
+    appType: 'webApp'
+    WebAppName: 'energyexplorer'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+
 - task: PublishBuildArtifacts@1
